Fix mobile contact info link overflow problem

--- a/homepage.css
+++ b/homepage.css
@@ -113,5 +113,6 @@ a {
 
   #contactInfo {
     margin-top: 20px;
+    overflow: scroll;
   }
 }
